--- a/Develop/package.json
+++ b/Develop/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "jwt-decode": "^3.1.2",
     "mongoose": "^7.3.1",
+    "node.js": "^0.0.1-security",
     "react-bootstrap": "^2.8.0",
     "react-router-dom": "^6.14.0"
   }
